--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Afonso Calinas</title>
-    <link rel="stylesheet" href="src/style.css"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="src/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="src/favicons/favicon-16x16.png">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" type="image/png" sizes="192x192" href="src/favicons/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="src/favicons/android-chrome-512x512.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="src/favicons/apple-touch-icon.png">
-    <link rel="manifest" href="src/favicons/site.webmanifest">
+    <link rel="stylesheet" href="./src/style.css"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="./src/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./src/favicons/favicon-16x16.png">
+    <link rel="shortcut icon" href="./src/favicons/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="192x192" href="./src/favicons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="./src/favicons/android-chrome-512x512.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./src/favicons/apple-touch-icon.png">
+    <link rel="manifest" href="./src/favicons/site.webmanifest">
   </head>
   <body>
     <!-- Background and Social Bar at the right -->
