fix: Hopefully final fix

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Afonso Calinas</title>
-    <link rel="stylesheet" href="./src/style.css"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="./src/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./src/favicons/favicon-16x16.png">
-    <link rel="shortcut icon" href="./src/favicons/favicon.ico" type="image/x-icon">
-    <link rel="icon" type="image/png" sizes="192x192" href="./src/favicons/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="./src/favicons/android-chrome-512x512.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./src/favicons/apple-touch-icon.png">
-    <link rel="manifest" href="./src/favicons/site.webmanifest">
+    <link rel="stylesheet" href="./style.css"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png">
+    <link rel="shortcut icon" href="./favicons/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="192x192" href="./favicons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="./favicons/android-chrome-512x512.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-touch-icon.png">
+    <link rel="manifest" href="./favicons/site.webmanifest">
   </head>
   <body>
     <!-- Background and Social Bar at the right -->
@@ -40,14 +40,14 @@
     </div>
     
     <button class="endOfLine" id="next-button">
-      <img src="src/assets/next-button.png" alt="Next"> 
+      <img src="./assets/next-button.png" alt="Next"> 
     </button>
 
 
     <!-- About Me Section -->
     <div id="about-me" class="section">
       <div id="me-gif-wrapper">
-        <img src="src/assets/Me.gif" alt="About Me GIF">
+        <img src="./assets/Me.gif" alt="About Me GIF">
       </div>
       <div class="right-text">
         <h2>I'm uhh...</h2>
@@ -70,14 +70,14 @@
         </p>
       </div>
       <div id="right-gif-wrapper">
-        <img src="src/assets/RainyAdventuresGIF.gif" alt="Rainy Adventures GIF">
+        <img src="./assets/RainyAdventuresGIF.gif" alt="Rainy Adventures GIF">
       </div>
     </div>
 
     <!-- Hack Dance Section -->
     <div id="hack-dance" class="section">
       <div id="left-gif-wrapper">
-        <img src="src/assets/HackDanceGIF.gif" alt="Hack Dance GIF">
+        <img src="./assets/HackDanceGIF.gif" alt="Hack Dance GIF">
       </div>
       <div class="right-text">
         <h2>Hack Dance <a href="https://shiroexe.itch.io/hackdance" target="_blank" rel="noopener noreferrer" title="Hack Dance on itch.io">↗</a></h2>
@@ -90,7 +90,7 @@
       </div>
     </div>
 
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="./main.js"></script>
     <script type="module">
       const sections = ["#home", "#about-me", "#rainy-adventures", "#hack-dance"];
       let currentSection = 0;
